# riterm_app

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pubspec.yaml  riterm_secret_key
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/riterm/: MainActivity.kt
cli/: Cargo.toml  REFACTOR_REPORT.md
cli/logs/: riterm-cli.log.2025-11-02
cli/src/: main.rs  message_server.rs  shell.rs  terminal.rs  terminal_runner.rs
cli/src/terminal_driver/: mod.rs  unix.rs  windows.rs
cli/tests/: integration_tests.rs
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: iroh_client.dart
lib/src/rust/api/iroh_client/: private.dart
lib/src/screens/: connection_screen.dart  terminal_screen.dart
lib/src/services/: keyboard_shortcuts_service.dart  network_service.dart  terminal_service.dart
lib/src/widgets/: interactive_terminal.dart  keyboard_shortcuts_dialog.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
logs/: riterm-cli.log.2025-11-10
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  internal_state.rs  lib.rs
rust/src/api/: iroh_client.rs  mod.rs
rust_builder/: LICENSE  pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_riterm.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_riterm.podspec
rust_builder/windows/: CMakeLists.txt
shared/: Cargo.toml
shared/src/: event_manager.rs  lib.rs  message_protocol.rs  quic_server.rs  quic_terminal.rs  tcp_forwarding.rs  terminal_protocol.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
