[workspace]
members = ["cli", "shared", "rust"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.47", features = [
  "full",
  "net",
  "fs",
  "rt-multi-thread",
] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.9"
crossterm = "0.29"
uuid = { version = "1.17", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
iroh = "0.93"
iroh-base = "0.93"
bytes = "1.10"
futures = "0.3"
rand = "0.9"
bincode = "1.3"
chacha20poly1305 = "0.10"
aead = "0.5"
fast_qr = "0.13.1"
base64 = "0.22"
hex = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.production]
inherits = "release"
panic = "abort"
