[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
iroh = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
data-encoding = "2.6"
url = "2.5"
tracing-appender.workspace = true
bincode = { workspace = true }
chacha20poly1305 = "0.10"
aead = "0.5"
fast_qr = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
regex = "1.10"
lazy_static = "1.5"
dirs = "5.0"
gethostname = "0.5"
riterm-shared = { path = "../shared" }

# Terminal management dependencies
pin-project = "1.1.3"
cfg-if = "1.0.0"
encoding_rs = "0.8.31"

# QUIC protocol dependencies
async-trait = "0.1"
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
close_fds = "0.3.2"
libc = "0.2"
nix = { version = "0.30", features = ["ioctl", "process", "signal", "term"] }
rustix = { version = "0.38", features = ["pipe", "stdio", "termios", "fs"] }

[target.'cfg(windows)'.dependencies]
conpty = "0.7.0"
rustix = { version = "0.38", features = ["process"] }
windows = { version = "0.58", features = ["Win32_System_Power"] }

[features]
default = []
release-logging = []
