[package]
name = "riterm-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
iroh = { workspace = true }
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
aead = { workspace = true }
rand = { workspace = true }
data-encoding = "2.6"
url = "2.5"
futures = { workspace = true }
futures-util = "0.3"
tokio = { workspace = true }
tracing = { workspace = true }
regex = "1.10"
dirs = "5.0"
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
iroh-base = { workspace = true }
tracing-subscriber = "0.3"
